language menu position fix & developers-faststart images & collapse menu after clicking for mobile views

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -701,6 +701,37 @@ ul.bullets {
 
 
 #sub-fast-start {
+  #row1 {
+    .img-holder {
+      img {
+        margin-top: 90px;
+      }
+    }
+  }
+
+  #row2 {
+    .img-holder {
+      img {
+        margin-top: 35px;
+      }
+    }
+  }
+
+  #row3 {
+    .img-holder {
+      img {
+        margin-top: 15px;
+      }
+    }
+  }
+
+  #row4 {
+    .img-holder {
+      img {
+        margin-top: 50px;
+      }
+    }
+  }
 }
 
 
@@ -743,6 +774,9 @@ ul.bullets {
     position:absolute;
     top:269px;
     left:0;
+
+    // temporarily hidden
+    display: none;
   }
 
   a.click-icon {
@@ -1147,15 +1181,12 @@ footer {
   }
 
   #sub-header {
+    position: relative;
 
     #languages {
-      position: relative;
-
-      ul {
-        position: absolute;
-        top: -10px;
-        right: 12px;
-      }
+      position: absolute;
+      top: 0px;
+      right: 0px;
     }
 
     #sub-header-menu {
@@ -1211,6 +1242,45 @@ footer {
 
   .verify {
     display: none;
+  }
+
+  .container-content {
+    padding: 0 10px !important;
+  }
+
+  #sub-fast-start {
+    #row1 {
+      .img-holder {
+        img {
+          margin-top: 30px;
+          margin-bottom: -60px;
+        }
+      }
+    }
+
+    #row2 {
+      .img-holder {
+        img {
+          margin-bottom: -50px;
+        }
+      }
+    }
+
+    #row3 {
+      .img-holder {
+        img {
+          margin-bottom: -45px;
+        }
+      }
+    }
+
+    #row4 {
+      .img-holder {
+        img {
+          margin-bottom: -50px;
+        }
+      }
+    }
   }
 }
 
